# ElectroDynamicProj

./: .gitignore  CMakeLists.txt  README.md  custom_func_integration.cpp  ed.cpp  main.cpp  read_geometry.cpp  viz.py
check/: info.txt
data/output/: mesh_data.txt  shared_edges.txt
include/: config.h.in
include/geometry/: geometry.h
include/quadrature/: quadrature.h
scripts/: epr_viz.py  quadrature_viz.py  shared_edges_viz.py
src/: calc.cpp  custom_func_integration.cpp  geometry.cpp  integral.cpp  main.cpp  quadrature.cpp
